Install Ionicons and adjust styling

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "rdash-ui": "^1.0.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "Ionicons": "ionicons#^2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -33,6 +34,12 @@
         "assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    },
+    "Ionicons": {
+      "main": [
+        "less/ionicons.less",
+        "scss/ionicons.scss"
       ]
     }
   },
