--- a/bower.json
+++ b/bower.json
@@ -2,24 +2,26 @@
   "name": "gpquery",
   "version": "0.0.0",
   "dependencies": {
-    "modernizr": "~2.8.3",
-    "angular-animate": "~1.5.3",
-    "angular-cookies": "~1.5.3",
-    "angular-touch": "~1.5.3",
-    "angular-sanitize": "~1.5.3",
-    "angular-messages": "~1.5.3",
-    "angular-aria": "~1.5.3",
-    "angular-resource": "~1.5.3",
-    "angular-ui-router": "~0.2.15",
-    "bootstrap-sass": "~3.3.5",
-    "angular-bootstrap": "~0.14.3",
-    "malarkey": "yuanqing/malarkey#~1.3.1",
-    "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
-    "animate.css": "~3.4.0",
     "angular": "~1.5.3",
+    "angular-animate": "~1.5.3",
+    "angular-aria": "~1.5.3",
+    "angular-bootstrap": "~0.14.3",
+    "angular-cookies": "~1.5.3",
+    "angular-loading-bar": "^0.9.0",
+    "angular-messages": "~1.5.3",
+    "angular-resource": "~1.5.3",
+    "angular-sanitize": "~1.5.3",
+    "angular-toastr": "~1.5.0",
+    "angular-touch": "~1.5.3",
+    "angular-ui-router": "~0.2.15",
+    "animate.css": "~3.4.0",
+    "bootstrap-sass": "~3.3.5",
     "font-awesome": "^4.7.0",
-    "Ionicons": "ionicons#^2.0.1"
+    "Ionicons": "ionicons#^2.0.1",
+    "lodash": "^4.17.4",
+    "malarkey": "yuanqing/malarkey#~1.3.1",
+    "modernizr": "~2.8.3",
+    "moment": "~2.10.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -27,7 +29,6 @@
   "overrides": {
     "bootstrap-sass": {
       "main": [
-        "assets/stylesheets/_bootstrap.scss",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
@@ -37,7 +38,6 @@
     },
     "font-awesome": {
       "main": [
-        "less/font-awesome.less",
         "scss/font-awesome.scss",
         "fonts/fontawesome-webfont.eot",
         "fonts/fontawesome-webfont.svg",
@@ -48,7 +48,6 @@
     },
     "Ionicons": {
       "main": [
-        "less/ionicons.less",
         "scss/ionicons.scss",
         "fonts/ionicons.eot",
         "fonts/ionicons.svg",
@@ -58,6 +57,7 @@
     }
   },
   "resolutions": {
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "angular-loading-bar": "^0.9.0"
   }
 }
