--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "browser-sync-spa": "~1.0.3",
     "http-proxy-middleware": "~0.9.0",
     "chalk": "~1.1.1",
-    "uglify-save-license": "~0.4.1",
-    "wrench": "~1.5.8"
+    "uglify-save-license": "~0.4.1"
   },
   "engines": {
     "node": ">=0.10.0"
